k8s/config/adminer/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adminer
  labels:
    prod-gateway-access: "true"
