k8s/config/adminer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
  namespace: adminer
spec:
  selector:
    app: adminer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
